deployment/deployment-local.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeebreak-proxy-deployment
  labels:
    app: coffeebreak-proxy
spec:
  selector:
      matchLabels:
        app: coffeebreak-proxy
  replicas: 2
  template:
    metadata:
      labels:
        app: coffeebreak-proxy
    spec:
      containers:
      - name: coffeebreak-proxy
        image: benjaminhck/coffeebreak-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8074
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 5000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: coffeebreak-proxy-service
spec:
  type: LoadBalancer
  selector:
    app: coffeebreak-proxy
  ports:
     -  protocol: TCP
        name: https
        port: 8074
        targetPort: 8074

---
apiVersion: v1
kind: Pod
metadata:
  name: coffeebreak-web-pod
  labels:
    app: coffeebreak-web-pod
spec:
  containers:
    - name: coffeebreak-web-pod
      image: benjaminhck/coffeebreak-web:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 443
      readinessProbe:
        httpGet:
          path: /
          port: 443
          scheme: HTTPS
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 443
        initialDelaySeconds: 15
        periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: coffeebreak-web-service
spec:
  type: LoadBalancer
  selector:
    app: coffeebreak-web-pod
  ports:
     -  protocol: TCP
        name: http
        port: 80
        targetPort: 80
     -  protocol: TCP
        name: https
        port: 443
        targetPort: 443
