deployment/deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeebreak-ingress
  namespace: group2
  annotations:
    nginx.ingress.kubernetes.io/default-backend: coffeebreak-web-service:8888
spec:
  rules:
    - host: group2.sempro0.uvm.sdu.dk
      http:
        paths:
          - backend:
              service:
                name: coffeebreak-web-service
                port:
                  number: 8888
            pathType: Prefix
            path: /

          - backend:
              service: coffeebreak-web-service
              port:
                number: 8074
              pathType: Prefix
              path: /t
              

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeebreak-proxy-deployment
  labels:
    app: coffeebreak-proxy
spec:
  selector:
      matchLabels:
        app: coffeebreak-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: coffeebreak-proxy
    spec:
      containers:
      - name: coffeebreak-proxy
        image: benjaminhck/coffeebreak-socket:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8074
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 5000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: coffeebreak-proxy-service
spec:
  type: LoadBalancer
  selector:
    app: coffeebreak-proxy
  ports:
     -  protocol: TCP
        name: https
        port: 8074
        targetPort: 8074

---
apiVersion: v1
kind: Pod
metadata:
  name: coffeebreak-web-pod
  labels:
    app: coffeebreak-web-pod
spec:
  containers:
    - name: coffeebreak-web-pod
      image: benjaminhck/coffeebreak-web:latest
      ports:
        - containerPort: 80
      # readinessProbe:
      #   httpGet:
      #     path: /
      #     port: 8443
      #     scheme: HTTPS
      #   initialDelaySeconds: 5
      #   periodSeconds: 10
      # livenessProbe:
      #   tcpSocket:
      #     port: 8443
      #   initialDelaySeconds: 15
      #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: coffeebreak-web-service
spec:
  type: LoadBalancer
  selector:
    app: coffeebreak-web-pod
  ports:
     -  protocol: TCP
        name: http
        port: 8888
        targetPort: 80
